<resources>
    <string name="app_name">Tripaza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cameras">Camera</string>
    <string name="title_maps">Maps</string>
    <string name="title_menu_1">Welcome To Tripaza</string>
    <string name="title_menu_2">Lets Find Traditional Food Easily</string>
    <string name="title_menu_3">Find Your Dream Destination</string>
    <string name="title_menu_4">Prepare For Exploring</string>
    <string name="desc_menu_1">Look for the food you want and there are many traditional foods available.</string>
    <string name="desc_menu_2">Find a place to stay easily and with a destination that suits your wishes.</string>
    <string name="learn_now">Lets Go Join</string>
    <string name="APP_PREFERENCES_NAME">app_preferences_dark_mode</string>
    <string name="APP_PREFERENCES_DARK_MODE_KEY">app_preferences_dark_mode</string>
    <string name="foods">Foods</string>
    <string name="instagrammable_spots">Instagramable spots</string>
    <string name="popular_in">Popular in</string>
    <string name="featured_images">Featured images</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="line_separator">line separator</string>
    <string name="don_t_have_an_account">Don’t have an account? Sign up here</string>
    <string name="change_profile">Change Profile</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_22_maret_1999">22-Maret-1999</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_62811223344">+62811223344</string>
    <string name="update">Update</string>
    <string name="xxxx_mail_com">xxxx@mail.com</string>
    <string name="setting_icon">Setting Icon</string>
    <string name="title">Title</string>
    <string name="group_title">Group Title</string>
    <string name="floating_button">Floating button</string>
    <string name="header_background_images">Header background images</string>
    <string name="user_profile_photo">User profile photo</string>
    <string name="alicia_yana">Alicia Yana</string>
    <string name="account">Account</string>
    <string name="yana_mail_com">yana@mail.com</string>
    <string name="edit_button">Edit button</string>
    <string name="password_censored">******</string>
    <string name="settings">Settings</string>
    <string name="setting_button">setting button</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="we_are_one_step_closer">We are one step closer</string>
    <string name="yay">Yay</string>
    <string name="now_login_to_continue">Now login to continue</string>
    <string name="got_it">Got it</string>
    <string name="featured_item">Featured Item</string>
    <string name="featured_item_text">Wisata biru kota padang. ini hanya ilustrasi. Gambar diambil random dari google. Nama tempat wisata</string>
    <string name="location_icon">location icon</string>
    <string name="location">Location</string>
    <string name="star_rating">star rating</string>
    <string name="nearest_place">Nearest place</string>

</resources>