<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_item_images"
        android:layout_height="128dp"
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        app:srcCompat="@drawable/im_places_dummy_images"
        android:contentDescription="@string/featured_images" />

    <TextView
        android:id="@+id/title"
        style="@style/text.h3"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            app:tint="#ff0000"
            app:srcCompat="@drawable/ic_navigation_maps"
            android:contentDescription="@string/location_icon" />

        <TextView
            android:id="@+id/location"
            style="@style/text.p3"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />
    </LinearLayout>

    <include
        android:id="@+id/star_rating"
        layout="@layout/star_rating"/>
</LinearLayout>