<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.navigation.ui.profile.ProfileEditActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="64dp">

        <TextView
            android:id="@+id/profile_edit_tv_title"
            style="@style/text.h1"
            android:text="@string/change_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002" />

        <TextView
            android:id="@+id/profile_edit_tv_name_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/full_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_til_name"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_tv_name_title">

            <com.tripaza.tripaza.customview.EditTextGeneral
                android:id="@+id/profile_edit_et_name"
                style="@style/input_field"
                android:hint="@string/enter_full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/profile_edit_tv_dob_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_of_birth"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_til_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_til_dob"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_tv_dob_title">

            <com.tripaza.tripaza.customview.EditTextGeneral
                android:id="@+id/profile_edit_et_dob"
                style="@style/input_field"
                android:cursorVisible="false"
                android:enabled="true"
                android:focusable="false"
                android:hint="@string/date_22_maret_1999"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/profile_edit_tv_email_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_til_dob" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_til_email"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_tv_email_title">

            <com.tripaza.tripaza.customview.EditTextEmail
                android:id="@+id/profile_edit_et_email"
                style="@style/input_field"
                android:hint="@string/xxxx_mail_com"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/profile_edit_tv_phone_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_til_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_til_phone"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_tv_phone_title">

            <com.tripaza.tripaza.customview.EditTextPhone
                android:id="@+id/profile_edit_et_phone"
                style="@style/input_field"
                android:hint="@string/phone_number_62811223344"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/profile_edit_tv_password_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_til_phone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_til_password"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_tv_password_title"
            app:passwordToggleEnabled="true">

            <com.tripaza.tripaza.customview.EditTextPassword
                android:id="@+id/profile_edit_et_password"
                style="@style/input_field.password"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/profile_edit_btn_update"
            style="@style/button.wide"
            android:layout_height="wrap_content"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_til_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    