<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context=".ui.registration.RegisterFragmentLanding">

    <ImageView
        android:id="@+id/fr_register_landing_iv_featured"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/im_landing_featured_images"
        app:layout_constraintBottom_toTopOf="@+id/fr_register_landing_tv_text_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/featured_images" />

    <TextView
        android:id="@+id/fr_register_landing_tv_text_2"
        style="@style/text.h2"
        android:layout_marginBottom="24dp"
        android:text="@string/we_are_one_step_closer"
        app:layout_constraintBottom_toTopOf="@+id/fr_register_landing_tv_text_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fr_register_landing_tv_text_1"
        style="@style/text.h1"
        android:layout_marginBottom="16dp"
        android:text="@string/yay"
        app:layout_constraintBottom_toTopOf="@+id/fr_register_landing_tv_text_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fr_register_landing_tv_text_3"
        style="@style/text.p3"
        android:layout_marginBottom="16dp"
        android:text="@string/now_login_to_continue"
        app:layout_constraintBottom_toTopOf="@+id/fr_register_landing_btn_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fr_register_landing_btn_ok"
        style="@style/button.wide"
        android:layout_marginBottom="36dp"
        android:text="@string/got_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>