<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.registration.RegisterFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="64dp">

        <TextView
            android:id="@+id/fr_register_tv_title"
            style="@style/text.h1"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002" />

        <TextView
            android:id="@+id/fr_register_tv_name_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/full_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fr_register_til_name"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_tv_name_title">

            <com.tripaza.tripaza.customview.EditTextGeneral
                android:id="@+id/fr_register_et_name"
                style="@style/input_field"
                android:hint="@string/enter_full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fr_register_tv_dob_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_of_birth"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_til_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fr_register_til_dob"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_tv_dob_title">

            <com.tripaza.tripaza.customview.EditTextGeneral
                android:id="@+id/fr_register_et_dob"
                style="@style/input_field"
                android:cursorVisible="false"
                android:enabled="true"
                android:focusable="false"
                android:hint="@string/date_1999_01_21"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fr_register_tv_email_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_til_dob" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fr_register_til_email"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_tv_email_title">

            <com.tripaza.tripaza.customview.EditTextEmail
                android:id="@+id/fr_register_et_email"
                style="@style/input_field"
                android:hint="@string/xxxx_mail_com"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fr_register_tv_phone_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_til_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fr_register_til_phone"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_tv_phone_title">

            <com.tripaza.tripaza.customview.EditTextPhone
                android:id="@+id/fr_register_et_phone"
                style="@style/input_field"
                android:hint="@string/phone_number_62811223344"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/fr_register_tv_password_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_til_phone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fr_register_til_password"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_tv_password_title"
            app:passwordToggleEnabled="true">

            <com.tripaza.tripaza.customview.EditTextPassword
                android:id="@+id/fr_register_et_password"
                style="@style/input_field.password"
                android:hint="@string/password_censored" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/fr_register_btn_register"
            style="@style/button.wide"
            android:layout_marginTop="8dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <TextView
            android:id="@+id/fr_register_tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f00"
            app:layout_constraintBottom_toTopOf="@+id/fr_profile_iv_separator_line_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_btn_register"
            tools:text="Error" />

        <TextView
            android:id="@+id/fr_register_already_have_account"
            style="@style/text.p3"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_profile_iv_separator_line_account" />

        <ImageView
            android:id="@+id/fr_profile_iv_separator_line_account"
            style="@style/separator"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/line_separator"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fr_register_btn_register" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_til_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    