<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.registration.MainActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="64dp">
        <TextView
            android:id="@+id/main_tv_title"
            style="@style/text.h1"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07999998" />

        <TextView
            android:id="@+id/fr_register_tv_email_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_til_email"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_register_tv_email_title">

            <com.tripaza.tripaza.customview.EditTextEmail
                android:id="@+id/main_et_email"
                style="@style/input_field"
                android:hint="@string/email_address"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="30dp" />
        </com.google.android.material.textfield.TextInputLayout>
        
        <TextView
            android:id="@+id/main_tv_main_password_title"
            style="@style/text.h2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_til_email" />
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_til_password"
            style="@style/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/main_tv_main_password_title">

            <com.tripaza.tripaza.customview.EditTextPassword
                android:id="@+id/main_et_password"
                style="@style/input_field.password"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/main_btn_login"
            style="@style/button.wide"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_til_password"
            app:layout_constraintVertical_bias="0.25" />

        <ImageView
            android:id="@+id/fr_profile_iv_separator_line_account"
            style="@style/separator"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_btn_login"
            android:contentDescription="@string/line_separator" />
        
        <TextView
            android:id="@+id/main_tv_do_not_have_account"
            style="@style/text.p3"
            android:layout_marginTop="16dp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_profile_iv_separator_line_account" />

        <ProgressBar
            android:id="@+id/main_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/main_btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/main_til_password" />

        <TextView
            android:id="@+id/main_tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Error"
            android:visibility="gone"
            android:textColor="#f00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_btn_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>